openshift/deployment.yml
image_name: pythagoras
apiVersion: v1
kind: List
items:

- apiVersion: v1
  kind: ImageStream
  metadata:
    name: pythagoras-base
    labels:
      build: pythagoras

- apiVersion: v1
  kind: ImageStream
  metadata:
    name: pythagoras-s2i
    labels:
      build: pythagoras

- apiVersion: v1
  kind: ImageStream
  metadata:
    name: pythagoras
    labels:
      build: pythagoras

- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: pythagoras-base
    labels:
      build: pythagoras
  spec:
    runPolicy: Serial
    source:
      type: Git
      git:
        uri: 'https://github.com/patrickbucher/pythagoras.git'
      contextDir: base
    strategy:
      type: Docker
    output:
      to:
        kind: ImageStreamTag
        name: 'pythagoras-base:latest'
    triggers:
      - type: ConfigChange
      - type: ImageChange
        imageChangeParams:
          automatic: true
          from:
            kind: ImageStreamTag
            name: 'pythagoras-base'


- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: pythagoras-s2i
    labels:
      build: pythagoras
  spec:
    runPolicy: Serial
    source:
      type: Git
      git:
        uri: 'https://github.com/patrickbucher/pythagoras.git'
      contextDir: s2i
    strategy:
      type: Docker
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: 'pythagoras-base:latest'
    output:
      to:
        kind: ImageStreamTag
        name: 'pythagoras-s2i:latest'
    triggers:
      - type: ConfigChange
      - type: ImageChange
        imageChangeParams:
          automatic: true
          from:
            kind: ImageStreamTag
            name: 'pythagoras-s2i'

- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: pythagoras
    labels:
      build: pythagoras
  spec:
    RunPolicy: Serial
    source:
      type: Git
      git:
        uri: 'https://github.com/patrickbucher/pythagoras.git'
    strategy:
      type: Source
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: 'pythagoras-s2i:latest'
    output:
      to:
        kind: ImageStreamTag
        name: 'pythagoras:latest'
    triggers:
      - type: ConfigChange
      - type: ImageChange
        imageChangeParams:
          automatic: true
          from:
            kind: ImageStreamTag
            name: 'pythagoras'

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: pythagoras
    labels:
      app: pythagoras
  spec:
    template:
      metadata:
        labels:
          name: pythagoras
      spec:
        containers:
          - name: pythagoras
            image: 'pythagoras:latest'
            ports:
              - containerPort: 9999
                protocol: TCP
    replicas: 1
    triggers:
      - type: 'ConfigChange'
      - type: 'ImageChange'
        imageChangeParams:
          automatic: true
          containerNames:
            - 'pythagoras'
          from:
            kind: 'ImageStreamTag'
            name: 'pythagoras:latest'
    strategy:
      type: Rolling
    readinessProbe:
      httpGet:
        path: /canary
        port: 9999
      initialDelaySeconds: 5
      timeoutSeconds: 2
    livenessProbe:
      httpGet:
        path: /canary
        port: 9999
      initialDelaySeconds: 5
      timeoutSeconds: 2

- apiVersion: v1
  kind: Service
  metadata:
    name: pythagoras
    labels:
      app: pythagoras
  spec:
    ports:
      - name: 9999-tcp
        port: 9999
        targetPort: 9999
        protocol: TCP
    selector:
      deploymentconfig: pythagoras

- apiVersion: v1
  kind: Route
  metadata:
    name: pythagoras
    labels:
      app: pythagoras
  spec:
    path: /pythagoras
    port:
      targetPort: 9999-tcp
    to:
      kind: Service
      name: pythagoras
